[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Enemies/enemy_asteroid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/EnemyScripts/enemy_asteroid_4.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemies/blue alien.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/blue alien hands.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/blue alien stopped.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 515.009

[sub_resource type="CircleShape2D" id=2]
radius = 432.019

[node name="enemy_asteroid_4" instance=ExtResource( 1 )]
script = ExtResource( 2 )
healthDroppedValue = 3
knockback = 1

[node name="Sprite" parent="." index="0"]
position = Vector2( 1, 24 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="enemyStopped" type="Sprite" parent="Sprite" index="0"]
visible = false
position = Vector2( 9.53674e-07, 2.03252 )
texture = ExtResource( 5 )

[node name="Hands" type="Sprite" parent="Sprite" index="1"]
visible = false
position = Vector2( 9.53674e-07, 2.03252 )
texture = ExtResource( 4 )

[node name="PlayerCollision" parent="." index="1"]
visible = true
position = Vector2( 1.5, 7.5 )

[node name="HurtBox" parent="." index="2"]
visible = true

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = true

[node name="HitBox" parent="." index="3"]
visible = true

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 1.5, 7.5 )

[node name="AvoidBox" type="Area2D" parent="." index="4"]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AvoidBox" index="0"]
position = Vector2( 2, -1 )
shape = SubResource( 1 )

[node name="BulletCollision" parent="." index="5"]
visible = false

[node name="CollisionShape2D" parent="BulletCollision" index="0"]
visible = false

[node name="retreat_box" type="Area2D" parent="." index="6"]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="retreat_box" index="0"]
shape = SubResource( 2 )

[node name="BulletCollisionArea" parent="." index="7"]
visible = false

[connection signal="area_entered" from="AvoidBox" to="." method="_on_AvoidBox_area_entered"]
[connection signal="area_exited" from="AvoidBox" to="." method="_on_AvoidBox_area_exited"]
[connection signal="area_entered" from="retreat_box" to="." method="_on_retreat_box_area_entered"]
[connection signal="area_exited" from="retreat_box" to="." method="_on_retreat_box_area_exited"]

[editable path="HurtBox"]
[editable path="HitBox"]
